--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -1,1 +1,40 @@
-<h1>Ola mundo com Spring boot'</h1>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>My Codeblog</title>
+	<!-- CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+</head>
+
+<body>
+	<!-- As a link -->
+	<header>
+		<nav class="navbar bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">MyCodeblog</a>
+			</div>
+		</nav>
+	</header>
+	<section>
+		<div class="container" style="width: 60%; padding-bottom: 30px;">
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
+				aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="#">Home</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Posts</li>
+				</ol>
+			</nav>
+			
+			<div class="card shadow-sm bg-white rounded" style="margin-top: 20px;">
+				<div class="card-body">
+					Teste
+				</div>
+			</div>
+		</div>
+	</section>
+</body>
+
+</html>
