--- a/src/main/resources/templates/PostDetails.html
+++ b/src/main/resources/templates/PostDetails.html
@@ -1,1 +1,57 @@
-<b>Spring boot
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org">
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>My Codeblog</title>
+	<!-- CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+	<!-- Import Google Icon Font -->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+</head>
+
+<body>
+	<!-- As a link -->
+	<header>
+		<nav class="navbar bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#"><b>MyCodeblog</a>
+			</div>
+		</nav>
+	</header>
+	<main>
+		<div class="container" style="width: 60%; padding-bottom: 30px;">
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
+				aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="#">Home</a></li>
+					<li class="breadcrumb-item" aria-current="page"><a href="/posts">Posts</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Post</li>
+				</ol>
+			</nav>
+			<article>
+				<h1 class="card-title" style="font-weight: bold; margin-bottom: 20px;"><span
+						th:text="${post.titulo}"></span></h1>
+				<p class="card-subtitle mb-2 text-muted">
+					<i class="material-icons">person_outline</i>
+					<span th:text="${post.autor}"></span>
+					<br>
+					<i class="material-icons">date_range</i>
+					<span th:text="${post.data}"></span>
+				</p>
+				<section>
+					<p class="card-text" style="margin-top: 40px;"><span th:utext="${post.texto}"></span></p>
+				</section>
+			</article>
+
+
+		</div>
+	</main>
+</body>
+
+</html>
