--- a/src/main/resources/templates/PostForm.html
+++ b/src/main/resources/templates/PostForm.html
@@ -1,1 +1,69 @@
-<a>Post Form</a>
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org">
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>My Codeblog</title>
+	<!-- CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+</head>
+
+<body>
+	<!-- As a link -->
+	<header>
+		<nav class="navbar bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#"><b>MyCodeblog</a>
+			</div>
+		</nav>
+	</header>
+	<section>
+		<div class="container" style="width: 60%; padding-bottom: 30px;">
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
+				aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<!--<li class="breadcrumb-item"><a href="#">Home</a></li>-->
+					<li class="breadcrumb-item" aria-current="page"><a href="/posts">Posts</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Novo Post</li>
+				</ol>
+			</nav>
+
+			<div>
+				<form method="post">
+					<div class="form-group">
+						<input type="text" class="form-control" name="titulo" placeholder="Título *">
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" name="autor" placeholder="Autor *">
+					</div>
+
+					<textarea id="summernote" type="text" class="form-control" name="texto"
+						placeholder="Texto *"></textarea>
+
+					<small class="form-text text-muted">(*) Campos obrigatórios</small>
+
+					<button type="submit" class="btn btn-primary" style="margin-top: 10px;">Publicar</button>
+					<a href="/posts" class="btn btn-light" role="button" style="margin-top: 10px;">Cancelar</a>
+					<!--<button type="submit" class="btn" style="margin-top: 10px;">Cancelar</button>-->
+				</form>
+			</div>
+
+			<!--<div class="card shadow-sm bg-white rounded" style="margin-top: 20px;" th:each="post : ${posts}">
+				<div class="card-body">
+					<p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
+						<span th:text="${post.autor}"></span>
+						<span th:text="${post.data}"></span>
+					</p>
+					
+					<a th:href="${(#mvc.url('CC#getPostsDetails').arg(0, post.id)).build()}"><h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;"><span th:text="${post.titulo}"></span></h4></a>
+					<p class="card-text"><span th:utext="${#strings.abbreviate(post.texto, 400)} "></span></p>
+				</div>
+			</div>-->
+		</div>
+	</section>
+</body>
+
+</html>
