--- a/src/main/resources/templates/PostForm.html
+++ b/src/main/resources/templates/PostForm.html
@@ -36,11 +36,11 @@
 					<div class="form-group">
 						<input type="text" class="form-control" name="titulo" placeholder="Título *">
 					</div>
-					<div class="form-group">
+					<div class="form-group" style="margin-top: 10px;">
 						<input type="text" class="form-control" name="autor" placeholder="Autor *">
 					</div>
 
-					<textarea id="summernote" type="text" class="form-control" name="texto"
+					<textarea id="summernote" style="margin-top: 10px;" type="text" class="form-control" name="texto"
 						placeholder="Texto *"></textarea>
 
 					<small class="form-text text-muted">(*) Campos obrigatórios</small>
