--- a/src/main/resources/templates/PostForm.html
+++ b/src/main/resources/templates/PostForm.html
@@ -9,6 +9,13 @@
 	<!-- CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.js"></script>
+
 </head>
 
 <body>
@@ -32,6 +39,7 @@
 			</nav>
 
 			<div>
+				<th:block th:include="mensagemValidacao"></th:block>
 				<form method="post">
 					<div class="form-group">
 						<input type="text" class="form-control" name="titulo" placeholder="Título *">
@@ -64,6 +72,13 @@
 			</div>-->
 		</div>
 	</section>
+	<script>
+		$('#summernote').summernote({
+			placeholder: 'Texto *',
+			tabsize: 2,
+			height: 300
+		});
+	</script>
 </body>
 
 </html>
